@@ -1,3 +1,9 @@
+2002-04-10  Alan Modra  <amodra@bigpond.net.au>
+
+	* as.c (parse_args <OPTION_VERSION>): Use VERSION is
+	BFD_VERSION_STRING unavailable.
+	* config/tc-i386.c (INLINE): Define (for non-BFD assembler).
+
 2002-04-04  Alan Modra  <amodra@bigpond.net.au>
 
 	* dep-in.sed: Cope with absolute paths.
